modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -65,10 +65,9 @@
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
                              style="padding: 2rem;border: 3px solid red;border-radius:4rem;background-color: #f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="h-25 d-inline-block col-12 start">
+                                <div class="h-25 d-inline-block col-12 start" style="margin-top: 3%">
                                     <h2 class="bold text-center">Nimm teil an der Umfrage zur Biennale <span
-                                            class="ostrale"
-                                            style="">O</span>23!
+                                            class="ostrale">O</span>23!
                                     </h2>
                                 </div>
                                 <div class="h-50 d-inline-block col"
@@ -79,8 +78,8 @@
                                      height: 35%;
                                      margin-top: 3%;">
                                 </div>
-                                <div class="h-25 col position-relative" style="margin-top: 5%">
-                                    <div class="d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                <div class="position-relative" style="margin-top: 5%">
+                                    <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
@@ -94,7 +93,7 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="h-25 d-inline-block col-12" style="margin-top: 5%">
+                                <div class="h-25 d-inline-block col-12" style="margin-top: 3%">
                                     <h2 class="bold text-center">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
@@ -108,8 +107,8 @@
                                      margin-top: 3%;">
 
                                 </div>
-                                <div class="h-25 col position-relative">
-                                    <div class="d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                <div class="position-relative">
+                                    <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
