--- a/html5/index.html
+++ b/html5/index.html
@@ -65,7 +65,7 @@
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
                              style="padding: 2rem;border: 3px solid red;border-radius:4rem;background-color: #f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="h-25 d-inline-block col-12 start" style="margin-top: 3%">
+                                <div class="h-25 d-inline-block col" style="margin-top: 2%">
                                     <h2 class="bold text-center">Nimm teil an der Umfrage zur Biennale <span
                                             class="ostrale">O</span>23!
                                     </h2>
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="position-relative" style="margin-top: 5%">
                                     <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow-lg"
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-2 rounded-3 shadow-lg"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                     </div>
@@ -93,7 +93,7 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
-                                <div class="h-25 d-inline-block col-12" style="margin-top: 3%">
+                                <div class="h-25 d-inline-block col" style="margin-top: 3%">
                                     <h2 class="bold text-center">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
@@ -105,11 +105,10 @@
                                      min-height: 260px;
                                      height: 35%;
                                      margin-top: 3%;">
-
                                 </div>
                                 <div class="position-relative">
                                     <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-3 rounded-3"
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-2 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
