modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -107,8 +107,8 @@
                                             class="ostrale" style="">O</span>23!
                                     </h2>
                                 </div>
-                                <div class="position-relative" style="margin-top: 3%">
-                                    <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
+                                <div class="h-25 col d-inline-block" style="margin-top: 3%">
+                                    <div class="bottom-0 start-50 translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-2 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
