modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -94,7 +94,7 @@
                              style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
                             <div class="row">
 
-                                <div class="h-75 d-inline-block col-6"
+                                <div class="h-100 d-inline-block col-6"
                                      style="background-image: url('./images/slider/slide04-wesley_580x581px.png');
                                      background-repeat: no-repeat;background-position: center;
                                      background-size: contain;
@@ -102,21 +102,17 @@
                                      height: 35%;
                                      margin-top: 3%;">
                                 </div>
-                                <div class="h-75 d-inline-block col-6" style="margin-top: 3%">
+                                <div class="h-100 d-inline-block col-6" style="margin-top: 3%">
                                     <h2 class="bold text-center">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
-                                    <div class="position-relative" style="margin-top: 3%">
-                                        <div class="d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
-                                            <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-2 rounded-3"
-                                               data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
-                                               role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
-                                                survey</a>
-                                        </div>
+                                    <div class="d-inline-block translate-middle-x" style="margin-top: 3%">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-2 rounded-3"
+                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
+                                           role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
+                                            survey</a>
                                     </div>
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
