modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -58,29 +58,22 @@
                      style="min-height: 100%;background-color:black;opacity: 1;">-->
             </div>
             <div class="d-flex col end min-vh-100"
-                 style="padding-right:7%;">
+                 style="padding-right:10rem;">
                 <div class="rahmen w-100">
                     <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 6%;padding-bottom: 3%;">
+                         style="padding-top: 8rem;padding-bottom: 4rem;">
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
-                             style="padding: 2rem;border: 3px solid red;border-radius:4rem;background-color: #f3f3f3;opacity: 0.8;">
+                             style="padding: 2rem;border: 4px solid red;background-color: white;opacity: 0.8;">
                             <div class="row">
-                                <div class="h-25 d-inline-block col" style="margin-top: 2%">
-                                    <h2 class="bold text-center">Nimm teil an der Umfrage zur Biennale <span
-                                            class="ostrale">O</span>23!
+                                <div class="col">
+                                    <h2 class="bold ms-auto">Nimm teil an der Umfrage zur Biennale <span class="ostrale"
+                                                                                                         style="">O</span>23!
                                     </h2>
+                                    <br>
                                 </div>
-                                <div class="h-50 d-inline-block col"
-                                     style="background-image: url('./images/slider/slide01-abben_580x581px.png');
-                                     background-repeat: no-repeat;background-position: center;
-                                     background-size: contain;
-                                     min-height: 260px;
-                                     height: 35%;
-                                     margin-top: 3%;">
-                                </div>
-                                <div class="position-relative" style="margin-top: 3%">
-                                    <div class="h-25 col d-inline-block position-absolute bottom-0 start-50 translate-middle-x">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-2 rounded-3 shadow-lg"
+                                <div class="row align-items-center align-bottom">
+                                    <div class="d-flex col align-items-center">
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                     </div>
@@ -89,25 +82,19 @@
                         </div>
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 3%;padding-bottom: 6%;">
+                         style="padding-top: 3rem;padding-bottom: 8rem;">
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 3px solid red;border-radius:2rem; padding: 2rem;background-color:#f3f3f3;opacity: 0.8;">
+                             style="border: 4px solid red;padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
-
-                                <div class="h-100 d-inline-block col-6"
-                                     style="background-image: url('./images/slider/slide04-wesley_580x581px.png');
-                                     background-repeat: no-repeat;background-position: center;
-                                     background-size: contain;
-                                     min-height: 260px;
-                                     height: 35%;
-                                     margin-top: 3%;">
-                                </div>
-                                <div class="h-100 d-inline-block col-6" style="margin-top: 3%">
-                                    <h2 class="bold text-center">Take part in the survey about the biennial <span
+                                <div class="col">
+                                    <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
-                                    <div class="d-inline-block translate-middle-x" style="margin-top: 3%">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow-lg text-white display-2 rounded-3"
+                                    <br>
+                                </div>
+                                <div class="row align-items-center align-bottom">
+                                    <div class="d-flex col align-items-center">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
