--- a/html5/index.html
+++ b/html5/index.html
@@ -72,7 +72,7 @@
                                     <br>
                                 </div>
                                 <div class="row align-items-center align-bottom">
-                                    <div class="d-flex col align-items-center">
+                                    <div class="d-flex col align-items-center start-50 bottom translate-middle-x">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
@@ -93,7 +93,7 @@
                                     <br>
                                 </div>
                                 <div class="row align-items-center align-bottom">
-                                    <div class="d-flex col align-items-center">
+                                    <div class="d-flex col align-items-center start-50 bottom translate-middle-x">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
