modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -70,6 +70,11 @@
                                                                                                          style="">O</span>23!
                                     </h2>
                                     <br>
+                                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+                                        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                                        no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                                    </br>
                                 </div>
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
@@ -90,7 +95,12 @@
                                     <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
                                     </h2>
-                                    <br>
+                                    </br>
+                                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+                                        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                                        no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                                    </br>
                                 </div>
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
