modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -127,11 +127,11 @@
                 <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
                 <button class="btn carousel-control-prev-icon" disabled data-bs-target="#emy-modal"
                         data-bs-previous="true" aria-label="Zur&uml;ck / Back">
-                    <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
+                    <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times;</span>
                 </button>
                 <button class="btn close" data-bs-target="#my-modal" data-bs-toggle="modal" data-bs-dismiss="modal"
                         aria-label="Close">
-                    <span aria-hidden="true">&times</span>
+                    <span aria-hidden="true">&#8656;</span>
                 </button>
             </div>
             <div class="modal-body">
