--- a/html5/index.html
+++ b/html5/index.html
@@ -19,7 +19,7 @@
           crossorigin="anonymous"/>
     <!-- JQuery JS -->
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>
+    <script type="module" src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
     <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
@@ -30,11 +30,12 @@
     <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico"/>
     <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js"
+    <script type="module" ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
+    <script type="module" ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js"
             crossorigin="anonymous"></script>
+    <!--
     <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
-    <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
+    <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
     <script src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
