modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -37,7 +37,7 @@
     <!--
     <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
     <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
-    <script src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
+    <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
 <body id="page">
