modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -80,10 +80,10 @@
                                 </div>
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
-                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-bs-locale="de"
-                                           role="button" id="BtnDE" onclick="window.call_startSurvey('de');">Starte
-                                            Umfrage</a>
+                                        <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
+                                           data-bs-toggle = "modal" data-bs-target = "#my-modal" data-bs-locale = "de"
+                                           id = "BtnDE" onclick = "call_startSurvey('de');" role = "button" >Starte
+                                                                                                             Umfrage</a >
                                     </div>
                                 </div>
                             </div>
@@ -107,10 +107,10 @@
                                 </div>
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
-                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-bs-locale="en"
-                                           role="button" id="BtnEN" onclick="window.call_startSurvey('en');">Start the
-                                            survey</a>
+                                        <a class = "btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
+                                           data-bs-toggle = "modal" data-bs-target = "#my-modal" data-bs-locale = "en"
+                                           id = "BtnEN" onclick = "call_startSurvey('en');" role = "button" >Start the
+                                                                                                             survey</a >
                                     </div>
                                 </div>
                             </div>
