--- a/html5/index.html
+++ b/html5/index.html
@@ -84,8 +84,8 @@
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-toggle = "modal" data-bs-target = "#my-modal" data-bs-locale = "de"
-                                           id = "BtnDE" onclick = "call_startSurvey('de');" role = "button" >Starte
-                                                                                                             Umfrage</a >
+                                           id = "BtnDE" role = "button" >Starte
+                                                                         Umfrage</a >
                                     </div>
                                 </div>
                             </div>
@@ -111,8 +111,7 @@
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
                                            data-bs-toggle = "modal" data-bs-target = "#my-modal" data-bs-locale = "en"
-                                           id = "BtnEN" onclick = "call_startSurvey('en');" role = "button" >Start the
-                                                                                                             survey</a >
+                                           id = "BtnEN" role = "button" >Start the survey</a >
                                     </div>
                                 </div>
                             </div>
