modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -17,11 +17,9 @@
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           crossorigin="anonymous"/>
-    <!-- JQuery JS
+    <!-- JQuery JS-->
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
-    -->
-    <!--
-    <script type="module" src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>-->
+    <!--<script type="module" src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>-->
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
     <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
