modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -81,7 +81,7 @@
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
-                                           data-bs-locale = "de" data-bs-toggle = "modal"
+                                           data-bs-locale = "de" data-bs-target = "#my-modal" href = "#my-modal"
                                            id = "BtnDE" role = "button" >Starte
                                                                          Umfrage</a >
                                     </div>
@@ -108,7 +108,7 @@
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
-                                           data-bs-locale = "en" data-bs-toggle = "modal"
+                                           data-bs-locale = "en" data-bs-target = "#my-modal" href = "#my-modal"
                                            id = "BtnEN" role = "button" >Start the survey</a >
                                     </div>
                                 </div>
