--- a/html5/index.html
+++ b/html5/index.html
@@ -83,7 +83,7 @@
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-locale = "de" data-bs-target = "#my-modal" data-bs-toggle = "modal"
-                                           onclick = "window.call_startSurvey('de');"
+                                           onclick = "call_startSurvey('de');"
                                            id = "BtnDE" role = "button" >Starte
                                                                          Umfrage</a >
                                     </div>
@@ -123,6 +123,14 @@
         </div>
     </div>
 </main>
+<script type = "application/javascript" >
+    function call_startSurvey2({locale: string}) {
+        window.ostrale_survey_locale = locale;
+        $("#surveyElement").survey({model: o23survey, locale: locale});
+        console.log('document.locale: ' + window.ostrale_survey_locale);
+        console.log('survey.locale: ' + window.o23survey.locale);
+    };
+</script >
 <footer class="d-none">© Ostrale 2023 | All Rights Reserved | Version: 2.0.10-stable // @fehlercode42</footer>
 
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
