--- a/html5/index.html
+++ b/html5/index.html
@@ -21,7 +21,7 @@
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
     <script ASYNC crossorigin = "anonymous" src = "/js/jquery.min.js" type = "module" ></script >
-    <!--<script type="module" src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>-->
+    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
     <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
@@ -126,10 +126,11 @@
 </main>
 <script type = "application/javascript" >
     function call_startSurveyDE() {
+        import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
-
-        $("#surveyElement").survey({model: o23survey, locale: 'de'});
-        o23survey.locale = 'de';
+        const survey = new Survey.Model(json);
+        $("#surveyElement").survey({model: survey, locale: 'de'});
+        survey.locale = 'de';
         console.log('document.locale: ' + window.ostrale_survey_locale);
         console.log('survey.locale: ' + o23survey.locale);
     };
