--- a/html5/index.html
+++ b/html5/index.html
@@ -21,7 +21,8 @@
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
     <script ASYNC crossorigin = "anonymous" src = "/js/jquery.min.js" type = "module" ></script >
-    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >
+    <!--
+    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >-->
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
     <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
@@ -36,6 +37,7 @@
     <script type="module" ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
     <script type="module" ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js"
             crossorigin="anonymous"></script>
+            -->
     <!--
     <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
     <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
@@ -130,7 +132,7 @@
         window.ostrale_survey_locale = 'de';
         const survey = new Survey.Model(json);
         $("#surveyElement").survey({model: survey, locale: 'de'});*/
-        $("#surveyElement").survey({model: document.o23survey, locale: 'de'});
+        $("#surveyElement").o23survey({model: document.o23survey, locale: 'de'});
         document.o23survey.locale = 'de';
         console.log('document.locale: ' + window.ostrale_survey_locale);
         console.log('survey.locale: ' + o23survey.locale);
