modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -128,13 +128,14 @@
 </main>
 <script type = "application/javascript" >
     function call_startSurveyDE() {
-        console.log('o23survey: ' + document.o23survey);
+        import o23survey from './js/scripts';
+        console.log('o23survey: ' + o23survey);
         /*import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
         const survey = new Survey.Model(json);
         $("#surveyElement").survey({model: survey, locale: 'de'});*/
-        $("#surveyElement").Survey({model: o23survey, locale: 'de'});
-        document.o23survey.locale = 'de';
+        $("#surveyElement").survey({model: o23survey, locale: 'de'});
+        o23survey.locale = 'de';
         console.log('document.locale: ' + window.ostrale_survey_locale);
         console.log('survey.locale: ' + o23survey.locale);
     };
