modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -20,7 +20,7 @@
     <!-- JQuery JS
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
-    <script ASYNC crossorigin = "anonymous" src = "/js/jquery.min.js" type = "module" ></script >
+    <script ASYNC crossorigin = "anonymous" src = "./js/jquery.min.js" type = "module" ></script >
     <!--
     <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >-->
     <!-- SurveyJS Theme CSS -->
