--- a/html5/index.html
+++ b/html5/index.html
@@ -41,7 +41,7 @@
     <!--
     <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
     <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
-    <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
+    <script crossorigin = "anonymous" src = "./js/scripts.js" type = "text/javascript" ></script >
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
 <body id="page">
@@ -128,7 +128,7 @@
 </main>
 <script type = "application/javascript" >
     function call_startSurveyDE() {
-        import o23survey from './js/scripts';
+
         console.log('o23survey: ' + o23survey);
         /*import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
